--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,39 +1,1 @@
-*                                                                @geeknoid @linsun @rshriram @howardjohn
-/bin/                                                            @istio/wg-test-and-release-maintainers
-/galley/                                                         @istio/wg-config-maintainers
-/install/                                                        @istio/wg-environments-maintainers
-/istioctl/                                                       @istio/wg-user-experience-maintainers
-/mixer/                                                          @istio/wg-policies-and-telemetry-maintainers
-/pilot/                                                          @istio/wg-networking-maintainers
-/pilot/pkg/security/                                             @istio/wg-security-maintainers
-/pilot/pkg/config/                                               @istio/wg-config-maintainers @istio/wg-networking-maintainers
-/pilot/pkg/networking/plugin/authn/                              @istio/wg-security-maintainers
-/pilot/pkg/networking/plugin/authz/                              @istio/wg-security-maintainers
-/pilot/pkg/networking/plugin/mixer/                              @istio/wg-policies-and-telemetry-maintainers
-/pilot/pkg/config/                                               @istio/wg-networking-maintainers-pilot
-/pilot/pkg/serviceregistry/                                      @istio/wg-networking-maintainers-pilot
-/pilot/pkg/model/                                                @istio/wg-networking-maintainers-pilot
-/pilot/pkg/networking/core                                       @istio/wg-networking-maintainers-pilot
-/pilot/pkg/proxy                                                 @istio/wg-networking-maintainers-pilot
-/pkg/bootstrap/                                                  @istio/wg-environments-maintainers
-/pkg/mcp/                                                        @istio/wg-config-maintainers
-/prow/                                                           @istio/wg-test-and-release-maintainers
-/release/                                                        @istio/wg-test-and-release-maintainers
-/samples/                                                        @istio/wg-docs-maintainers
-/security/                                                       @istio/wg-security-maintainers
-/tests/                                                          @istio/wg-test-and-release-maintainers
-/tests/e2e/local/                                                @istio/wg-test-and-release-maintainers
-/tests/e2e/tests/mixer/                                          @istio/wg-policies-and-telemetry-maintainers
-/tests/e2e/tests/pilot/                                          @istio/wg-networking-maintainers
-/tests/integration/conformance/                                  @istio/wg-test-and-release-maintainers
-/tests/integration/framework/                                    @istio/wg-test-and-release-maintainers
-/tests/integration/galley/                                       @istio/wg-config-maintainers
-/tests/integration/mixer/                                        @istio/wg-policies-and-telemetry-maintainers
-/tests/integration/telemetry/                                    @istio/wg-policies-and-telemetry-maintainers
-/tests/integration/pilot/                                        @istio/wg-networking-maintainers
-/tests/integration/qualification/                                @istio/wg-test-and-release-maintainers
-/tests/integration/security/                                     @istio/wg-security-maintainers
-/tests/istio.io/                                                 @istio/wg-docs-maintainers
-/tools/                                                          @istio/wg-test-and-release-maintainers
-/tools/istio-iptables/                                           @istio/wg-networking-maintainers
-/tools/packaging/common/istio-iptables.sh                        @istio/wg-networking-maintainers
+* @istio/release-managers-1-4
