--- a/install/kubernetes/helm/istio/charts/mixer/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/mixer/templates/deployment.yaml
@@ -427,6 +427,7 @@ spec:
         chart: {{ template "mixer.chart" $ }}
         heritage: {{ $.Release.Service }}
         release: {{ $.Release.Name }}
+        security.istio.io/mtlsReady: "true"
         istio: mixer
         istio-mixer-type: {{ $key }}
       annotations:
