--- a/istioctl/cmd/testdata/auth/upgrade/rbac-global-on.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/rbac-global-on.golden.yaml
@@ -2,6 +2,6 @@ apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
   name: deny-all
-  namespace: istio-system
+  namespace: my-root-namespace
 spec:
 ---
