--- a/istioctl/cmd/testdata/auth/upgrade/one-rule-one-service.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/one-rule-one-service.golden.yaml
@@ -2,7 +2,7 @@ apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
   name: deny-all
-  namespace: istio-system
+  namespace: my-root-namespace
 spec:
 ---
 apiVersion: security.istio.io/v1beta1
