watch only istio-operator ns

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -23,7 +23,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
-              value: ""
+              value: "istio-operator"
             - name: LEADER_ELECTION_NAMESPACE
               valueFrom:
                 fieldRef:
