--- a/install/kubernetes/helm/istio/files/injection-template.yaml
+++ b/install/kubernetes/helm/istio/files/injection-template.yaml
@@ -184,6 +184,10 @@ containers:
     valueFrom:
       fieldRef:
         fieldPath: spec.serviceAccountName
+{{- if (not .Values.security.enabled) }}
+  - name: SIDECAR_PROBE_CHECK_SECRET_MOUNT_KEY
+    value: "false"
+{{- end }}
 {{- if eq .Values.global.proxy.tracer "datadog" }}
   - name: HOST_IP
     valueFrom:
