fix the helm security.enabled stuff...
global is a reserved word for helm... only that is carried from root to
subchart.
security.enabled in kiali and other places are misleading, they
reference their own security.enabled settings
security.enabled=false is working via special requirements helm magic
not as the templating language...
need a global.security.enabled in the root and then only override in
values-istio-minimal.yaml

--- a/install/kubernetes/helm/istio/charts/gateways/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/gateways/templates/deployment.yaml
@@ -233,7 +233,13 @@ spec:
           - name: SERVICE_ACCOUNT
             valueFrom:
               fieldRef:
-                fieldPath: spec.serviceAccountName
+                fieldPath: spec.serviceAccountName                
+          {{- if $.Values.global.security }}
+          {{- if eq $.Values.global.security.enabled false }}
+          - name: SIDECAR_PROBE_CHECK_SECRET_MOUNT_KEY
+            value: "false"
+          {{- end }}
+          {{- end }}
           - name: ISTIO_META_POD_NAME
             valueFrom:
               fieldRef:
