--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,6 @@
 *                                                                @geeknoid @linsun @rshriram @howardjohn
 /bin/                                                            @istio/wg-test-and-release-maintainers
+/cmd/istiod/                                                     @istio/wg-environments-maintainers
 /galley/                                                         @istio/wg-config-maintainers
 /install/                                                        @istio/wg-environments-maintainers
 /istioctl/                                                       @istio/wg-user-experience-maintainers
