--- a/install/kubernetes/helm/istio/charts/gateways/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/gateways/templates/deployment.yaml
@@ -236,7 +236,7 @@ spec:
                 fieldPath: spec.serviceAccountName  
           {{- if $.Values.global.mtls.auto }}
           - name: ISTIO_AUTO_MTLS_ENABLED
-            value: true
+            value: "true"
           {{- end }}
           - name: ISTIO_META_POD_NAME
             valueFrom:
