--- a/install/kubernetes/helm/istio/files/injection-template.yaml
+++ b/install/kubernetes/helm/istio/files/injection-template.yaml
@@ -186,7 +186,7 @@ containers:
         fieldPath: spec.serviceAccountName
   {{- if .Values.global.mtls.auto }}
   - name: ISTIO_AUTO_MTLS_ENABLED
-    value: true
+    value: "true"
   {{- end }}
 {{- if eq .Values.global.proxy.tracer "datadog" }}
   - name: HOST_IP
