--- a/install/kubernetes/helm/istio-init/files/crd-14.yaml
+++ b/install/kubernetes/helm/istio-init/files/crd-14.yaml
@@ -1,6 +1,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    "helm.sh/resource-policy": keep
   creationTimestamp: null
   labels:
     app: istio-pilot
@@ -17,6 +19,7 @@ spec:
     kind: AuthorizationPolicy
     plural: authorizationpolicies
     singular: authorizationpolicy
+  preserveUnknownFields: false
   scope: Namespaced
   subresources:
     status: {}
