Rename functions in hosts.go, add test case for unexported SE

--- a/galley/pkg/config/analysis/analyzers/testdata/virtualservice_destinationhosts.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/virtualservice_destinationhosts.yaml
@@ -23,6 +23,17 @@ spec:
   - "*.eu.bookinfo.com"
 ---
 apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
+  name: service-entry-bookinfo
+  namespace: default-ignore
+spec:
+  exportTo:
+    - "."
+  hosts:
+  - "*" # This ServiceEntry should not match any instance as it isn't exported to other namespaces
+---
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: reviews
