--- a/istioctl/cmd/testdata/auth/upgrade/cluster-rbac-config-on-with-exclusion.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/cluster-rbac-config-on-with-exclusion.golden.yaml
@@ -8,19 +8,18 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-productpage
-  namespace: default
+  name: ns1-allow-all
+  namespace: ns1
 spec:
   rules:
-  - from:
-    - source:
-        namespaces:
-        - istio-system
-    to:
-    - operation:
-        methods:
-        - GET
-  selector:
-    matchLabels:
-      app: productpage
+    - {}
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: ns2-allow-all
+  namespace: ns2
+spec:
+  rules:
+    - {}
 ---
