--- a/common/config/.golangci.yml
+++ b/common/config/.golangci.yml
@@ -7,7 +7,7 @@
 
 service:
   # When updating this, also update the version stored in docker/build-tools/Dockerfile in the istio/tools repo.
-  golangci-lint-version: 1.18.x # use the fixed version to not introduce new linters unexpectedly
+  golangci-lint-version: 1.21.x # use the fixed version to not introduce new linters unexpectedly
 run:
   # timeout for analysis, e.g. 30s, 5m, default is 1m
   deadline: 20m
@@ -44,6 +44,11 @@ linters:
     - scopelint
     - funlen
     - bodyclose
+    - godox
+    - gocognit
+    - whitespace
+    - wsl
+    - dogsled
   fast: false
 
 linters-settings:
