--- a/galley/pkg/config/analysis/msg/messages.yaml
+++ b/galley/pkg/config/analysis/msg/messages.yaml
@@ -95,10 +95,10 @@ messages:
   - name: "SchemaValidationError"
     code: IST0106
     level: Error
-    description: "The resource has one or more schema validation errors."
-    template: "The resource has one or more schema validation errors: %v"
+    description: "The resource has a schema validation error."
+    template: "Schema validation error: %v"
     args:
-      - name: combinedErr
+      - name: err
         type: error
 
   - name: "MisplacedAnnotation"
