--- a/install/kubernetes/helm/istio/files/injection-template.yaml
+++ b/install/kubernetes/helm/istio/files/injection-template.yaml
@@ -259,15 +259,14 @@ containers:
   - name: STACKDRIVER_TRACING_MAX_NUMBER_OF_MESSAGE_EVENTS
     value: "{{ .ProxyConfig.GetTracing.GetStackdriver.GetMaxNumberOfMessageEvents }}"
   {{- end }}
-  {{- range $key, $value := .Values.global.proxy.env }}
+  {{ $envs := .Values.global.proxy.env }}
+  {{- if (isset .ObjectMeta.Annotations `sidecar.istio.io/environmentOverride`) }}
+  {{ $overrideEnvs := fromJSON (index .ObjectMeta.Annotations `sidecar.istio.io/environmentOverride`) }}
+  {{ $envs = merge $envs $overrideEnvs }}
+  {{- end }}
+  {{- range $key, $value := $envs }}
   - name: "{{ $key }}"
     value: "{{ $value }}"
-  {{- end }}
-  {{ if (isset .ObjectMeta.Annotations `sidecar.istio.io/environmentOverride`) }}
-  {{- range $key, $value := fromJSON (index .ObjectMeta.Annotations `sidecar.istio.io/environmentOverride`) }}
-  - name: "{{ $key }}"
-    value: "{{ $value }}"
-  {{- end }}
   {{- end }}
   imagePullPolicy: {{ .Values.global.imagePullPolicy }}
   {{ if ne (annotation .ObjectMeta `status.sidecar.istio.io/port` (valueOrDefault .Values.global.proxy.statusPort 0 )) `0` }}
