--- a/install/kubernetes/helm/istio-init/templates/job-crd-mixer.yaml
+++ b/install/kubernetes/helm/istio-init/templates/job-crd-mixer.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: istio-init-crd-14-{{ .Values.global.tag | printf "%v" | trunc 32 }}
+  name: istio-init-crd-mixer-{{ .Values.global.tag | printf "%v" | trunc 32 }}
 spec:
   template:
     metadata:
@@ -11,7 +11,7 @@ spec:
     spec:
       serviceAccountName: istio-init-service-account
       containers:
-      - name: istio-init-crd-14
+      - name: istio-init-crd-mixer
         image: "{{ .Values.global.hub }}/kubectl:{{ .Values.global.tag }}"
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- if .Values.job.resources }}
@@ -19,12 +19,12 @@ spec:
 {{ toYaml .Values.job.resources | indent 10 }}
 {{- end }}
         volumeMounts:
-          - name: crd-14
-            mountPath: /etc/istio/crd-14
-            readOnly: true
-        command: ["kubectl",  "apply", "-f", "/etc/istio/crd-14/crd-14.yaml"]
+        - name: crd-mixer
+          mountPath: /etc/istio/crd-mixer
+          readOnly: true
+        command: ["kubectl",  "apply", "-f", "/etc/istio/crd-mixer/crd-mixer.yaml"]
       volumes:
-        - name: crd-14
-          configMap:
-            name: istio-crd-14
+      - name: crd-mixer
+        configMap:
+          name: istio-crd-mixer
       restartPolicy: OnFailure
