disable SNI-DNAT at ingress gateway by default

--- a/install/kubernetes/helm/istio/charts/gateways/values.yaml
+++ b/install/kubernetes/helm/istio/charts/gateways/values.yaml
@@ -122,8 +122,8 @@ istio-ingressgateway:
   env:
     # A gateway with this mode ensures that pilot generates an additional
     # set of clusters for internal services but without Istio mTLS, to
-    # enable cross cluster routing.
-    ISTIO_META_ROUTER_MODE: "sni-dnat"
+    # enable cross cluster routing. Enable when using multi-cluster routing.
+    # ISTIO_META_ROUTER_MODE: "sni-dnat"
   nodeSelector: {}
   tolerations: []
 
@@ -201,7 +201,7 @@ istio-egressgateway:
     # A gateway with this mode ensures that pilot generates an additional
     # set of clusters for internal services but without Istio mTLS, to
     # enable cross cluster routing.
-    ISTIO_META_ROUTER_MODE: "sni-dnat"
+    # ISTIO_META_ROUTER_MODE: "sni-dnat"
   nodeSelector: {}
   tolerations: []
   
