The format of template has been changed since 1.2 (#18415)
The format of template has been changed since 1.2. Change the comment to the one we are currently using:
For example: https://raw.githubusercontent.com/istio/istio/release-1.2/install/kubernetes/helm/istio/example-values/values-istio-multicluster-gateways.yaml
```
  - "{{ valueOrDefault .DeploymentMeta.Namespace \"default\" }}.global"
```
, otherwise it will trigger error:
```
Internal error occurred: admission webhook "sidecar-injector.istio.io" denied the request: failed parsing generated injected YAML (check Istio sidecar injector configuration): error converting YAML to JSON: yaml: line 169: did not find expected '-' indicator
```



[ ] Configuration Infrastructure
[ ] Docs
[ ] Installation
[ ] Networking
[ ] Performance and Scalability
[ ] Policies and Telemetry
[ ] Security
[ ] Test and Release
[ ] User Experience
[ ] Developer Infrastructure

--- a/install/kubernetes/helm/istio/values.yaml
+++ b/install/kubernetes/helm/istio/values.yaml
@@ -415,7 +415,7 @@ global:
   # NOTE: If using templates, follow the pattern in the commented example below.
   # podDNSSearchNamespaces:
   # - global
-  # - "[[ valueOrDefault .DeploymentMeta.Namespace \"default\" ]].global"
+  # - "{{ valueOrDefault .DeploymentMeta.Namespace \"default\" }}.global"
 
   # If set to true, the pilot and citadel mtls will be exposed on the
   # ingress gateway
