--- a/galley/pkg/config/analysis/analyzers/testdata/virtualservice_destinationrules.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/virtualservice_destinationrules.yaml
@@ -45,3 +45,18 @@ spec:
     - destination:
         host: reviews.default.svc.cluster.local # FQDN representation is valid and should not generate an error
         subset: v1
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: reviews-mirror-bogussubset
+  namespace: default
+spec:
+  http:
+  - route:
+    - destination:
+        host: reviews
+        subset: v1
+    mirror:
+      host: reviews
+      subset: bogus # This subset does not exist, should result in a validation error
