Change test output for presense match

--- a/pilot/pkg/security/authz/builder/testdata/v1beta1/simple-policy-principal-with-*-out.yaml
+++ b/pilot/pkg/security/authz/builder/testdata/v1beta1/simple-policy-principal-with-*-out.yaml
@@ -10,7 +10,13 @@ rules:
             ids:
               - orIds:
                   ids:
-                    - any: true
+                    - metadata:
+                        filter: istio_authn
+                        path:
+                          - key: source.principal
+                        value:
+                          stringMatch:
+                            regex: .+
         - andIds:
             ids:
               - orIds:
