--- a/istioctl/cmd/testdata/auth/upgrade/one-rule-all-services-with-inclusion.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/one-rule-all-services-with-inclusion.golden.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-all
+  name: service-wildcard-0
   namespace: default
 spec:
   rules:
@@ -34,4 +34,6 @@ spec:
     - operation:
         methods:
         - GET
+  selector:
+    matchLabels: {}
 ---
