--- a/istioctl/cmd/testdata/auth/upgrade/one-rule-all-services.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/one-rule-all-services.golden.yaml
@@ -9,7 +9,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-all
+  name: service-wildcard-0
   namespace: default
 spec:
   rules:
@@ -26,4 +26,6 @@ spec:
     - operation:
         methods:
         - GET
+  selector:
+    matchLabels: {}
 ---
