--- a/istioctl/cmd/testdata/auth/upgrade/one-rule-multiple-services.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/one-rule-multiple-services.golden.yaml
@@ -9,7 +9,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-productpage
+  name: service-productpage-0
   namespace: default
 spec:
   rules:
@@ -33,7 +33,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-reviews
+  name: service-reviews-0
   namespace: default
 spec:
   rules:
