disable SNI-DNAT at ingress gateway by default (#18431)
* disable SNI-DNAT at ingress gateway by default

* Update values.yaml

* Update values.yaml

--- a/install/kubernetes/helm/istio/charts/gateways/values.yaml
+++ b/install/kubernetes/helm/istio/charts/gateways/values.yaml
@@ -120,10 +120,11 @@ istio-ingressgateway:
   ### Advanced options ############
 
   env:
-    # A gateway with this mode ensures that pilot generates an additional
-    # set of clusters for internal services but without Istio mTLS, to
-    # enable cross cluster routing.
-    ISTIO_META_ROUTER_MODE: "sni-dnat"
+    # By default, a gateway is in "standard" mode. If the mode is set to "sni-dnat", 
+    # pilot generates an additional
+    # set of clusters for internal services without Istio mTLS, to
+    # enable cross cluster routing. Enable when using multi-cluster routing.
+    ISTIO_META_ROUTER_MODE: "standard"
   nodeSelector: {}
   tolerations: []
 
@@ -198,10 +199,12 @@ istio-egressgateway:
     # the egress gateway sees the same set of endpoints as the sidecars
     # preserving backward compatibility
     # ISTIO_META_REQUESTED_NETWORK_VIEW: ""
-    # A gateway with this mode ensures that pilot generates an additional
+
+    # By default, a gateway is in "standard" mode. If the mode is set to "sni-dnat", 
+    # pilot generates an additional 
     # set of clusters for internal services but without Istio mTLS, to
     # enable cross cluster routing.
-    ISTIO_META_ROUTER_MODE: "sni-dnat"
+    ISTIO_META_ROUTER_MODE: "standard"
   nodeSelector: {}
   tolerations: []
   
