[release-1.4]:authz: support multiple services and prefix/suffix match for converter (#18491)
Cherrypick #18491, For istio/istio#12394

- Added support for multiple services and also prefix/suffix matching in services
- Updated to generate one AuthorizationPolicy for each single service item in ServiceRole
- Updated documentation and refactored to prepare for reading policies directly from k8s
- Fixed a bug in generating the deny-all policy to include `{}` in the spec, otherwise the policy will be rejected by validation
- Moved the converter to be under security directory, the actual logic should be put with other authz code as it's already sharing many internal data structures

--- a/istioctl/cmd/testdata/auth/converter/cluster-rbac-config-on-with-exclusion.golden.yaml
+++ b/istioctl/cmd/testdata/auth/converter/cluster-rbac-config-on-with-exclusion.golden.yaml
@@ -4,23 +4,23 @@ metadata:
   name: global-deny-all
   namespace: my-root-namespace
 spec:
+  {}
 ---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-productpage
-  namespace: default
+  name: ns1-allow-all
+  namespace: ns1
 spec:
   rules:
-  - from:
-    - source:
-        namespaces:
-        - istio-system
-    to:
-    - operation:
-        methods:
-        - GET
-  selector:
-    matchLabels:
-      app: productpage
+    - {}
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: ns2-allow-all
+  namespace: ns2
+spec:
+  rules:
+    - {}
 ---
