--- a/istioctl/cmd/testdata/auth/converter/one-rule-all-services-with-exclusion.golden.yaml
+++ b/istioctl/cmd/testdata/auth/converter/one-rule-all-services-with-exclusion.golden.yaml
@@ -4,11 +4,30 @@ metadata:
   name: global-deny-all
   namespace: my-root-namespace
 spec:
+  {}
 ---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-all
+  name: ns1-allow-all
+  namespace: ns1
+spec:
+  rules:
+    - {}
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: ns2-allow-all
+  namespace: ns2
+spec:
+  rules:
+    - {}
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: service-wildcard-0
   namespace: default
 spec:
   rules:
@@ -25,4 +44,6 @@ spec:
     - operation:
         methods:
         - GET
+  selector:
+    matchLabels: {}
 ---
