--- a/istioctl/cmd/testdata/auth/converter/one-rule-all-services.golden.yaml
+++ b/istioctl/cmd/testdata/auth/converter/one-rule-all-services.golden.yaml
@@ -1,21 +1,15 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: default-deny-all
-  namespace: default
+  name: global-deny-all
+  namespace: my-root-namespace
 spec:
+  {}
 ---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: ns2-deny-all
-  namespace: ns2
-spec:
----
-apiVersion: security.istio.io/v1beta1
-kind: AuthorizationPolicy
-metadata:
-  name: default-all
+  name: service-wildcard-0
   namespace: default
 spec:
   rules:
@@ -32,4 +26,6 @@ spec:
     - operation:
         methods:
         - GET
+  selector:
+    matchLabels: {}
 ---
