--- a/istioctl/cmd/testdata/auth/converter/one-rule-one-service.golden.yaml
+++ b/istioctl/cmd/testdata/auth/converter/one-rule-one-service.golden.yaml
@@ -4,22 +4,24 @@ metadata:
   name: global-deny-all
   namespace: my-root-namespace
 spec:
+  {}
 ---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: ns1-allow-all
-  namespace: ns1
+  name: service-productpage-0
+  namespace: default
 spec:
   rules:
-    - {}
----
-apiVersion: security.istio.io/v1beta1
-kind: AuthorizationPolicy
-metadata:
-  name: ns2-allow-all
-  namespace: ns2
-spec:
-  rules:
-    - {}
+  - from:
+    - source:
+        namespaces:
+        - istio-system
+    to:
+    - operation:
+        methods:
+        - GET
+  selector:
+    matchLabels:
+      app: productpage
 ---
