--- a/galley/pkg/config/analysis/msg/messages.yaml
+++ b/galley/pkg/config/analysis/msg/messages.yaml
@@ -113,3 +113,16 @@ messages:
         type: string
       - name: host
         type: string
+
+  - name: "ConflictingSidecarWorkloadSelectors"
+    code: IST0110
+    level: Error
+    description: "A Sidecar resource selects the same workloads as another Sidecar resource"
+    template: "The Sidecars %v in namespace %q select the same workload pod %q, which can lead to undefined behavior."
+    args:
+      - name: conflitingSidecars
+        type: []string
+      - name: namespace
+        type: string
+      - name: workloadPod
+        type: string
